--- a/.github/workflows/main_car-rental-app.yml
+++ b/.github/workflows/main_car-rental-app.yml
@@ -6,65 +6,36 @@ name: Build and deploy Node.js app to Azure Web App - car-rental-app
 on:
   push:
     branches:
-      - main
-  workflow_dispatch:
+      - main  # Triggers workflow on push to main branch
+  workflow_dispatch:  # Allows manual triggers
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18  # Update Node.js version to 18.x
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run build (if applicable)
-      run: npm run build
-
-    - name: Deploy to Azure
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: Car Rentals
-        slot-name: production  # Change if using a different slot
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+      # Step 2: Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          name: node-app
+          node-version: 18  # Ensure Node.js version is 18.x
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FA84676638654F77B05AF076F7FB5545 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EA9D318A4AB14011BCF077310F7AD1C0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_EA198593A578486B94BD41C36F7BBBE2 }}
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: npm install
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+      # Step 4: Build the application (if applicable)
+      - name: Run build
+        run: npm run build
+
+      # Step 5: Deploy to Azure Web App
+      - name: Deploy to Azure
+        uses: azure/webapps-deploy@v2
         with:
-          app-name: 'car-rental-app'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: car-rental-app  # Ensure this matches your Azure Web App name
+          slot-name: production  # Use "production" or change if using deployment slots
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+
