--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"No tests available\""
+    "test": "echo \"No tests available\"",
+    "build": "echo \"Build step not configured. Please update this script as needed.\""
   },
   "keywords": [],
   "author": "",
